fix: fixed the navbar link issue on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -802,7 +802,7 @@
             height: 0px;
         }
         .expanded {
-            height: 150vh;
+            height: 180vh;
             background-color: #161616;
         }
         .expanded .links {
